<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_production"
        android:enabled="true"
        android:icon="@drawable/ic_production_24"
        android:title="@string/text_production"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_standing"
        android:enabled="true"
        android:icon="@drawable/ic_standing"
        android:title="@string/text_standing"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_breakdowns"
        android:enabled="true"
        android:icon="@drawable/ic_breakdown"
        android:title="@string/text_breakdown"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_start_edit"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit"
        android:title="@string/text_start_edit"
        app:showAsAction="ifRoom" />
   <item
        android:id="@+id/action_finish"
        android:enabled="true"
        android:icon="@drawable/ic_finish"
        android:title="@string/text_finish"
        app:showAsAction="ifRoom" />
</menu>